testing/errors/alreadydefined5.a
;ACME 0.96.5
	a = 3
	a = [1, 3]	; -> "already defined" (type has changed)
